test/readonly/fail/downcast01.v3
//@execute 0=2; 1=!TypeCheckException; 2=!TypeCheckException; 3=3; 4=47
class A { }
class B extends A { }

def x: range<A> = [A.new(), B.new()];
def y: range<B> = [B.new(), B.new(), B.new()];

def main(a: int) -> int {
	match (a) {
		0 => return cast<A, A>(x).length;
		1 => return cast<B, A>(y).length;
		2 => return cast<A, B>(x).length;
		3 => return cast<B, B>(y).length;
	}
	return 47;
}
def cast<F, T>(x: range<F>) -> range<T> {
	return range<T>.!(x);
}
